add get ingredients api
